mise a jour rajout parallax et floating svg

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+<script src="js/main.js"></script>
 <body>
 
   <!-- NAVBAR -->
@@ -26,9 +28,9 @@
   </nav>
 
   <!-- INTRO SECTION -->
-  <section id="intro">
+  <section id="intro" class="section">
     <!-- SVG Backgrounds -->
-    <div class="svg-bg svg-cocktail"></div>
+    <div class="svg-bg svg-cocktail svg-floating"></div>
     <div class="svg-bg svg-plante"></div>
 
     <!-- Left text block -->
@@ -58,7 +60,7 @@
 
 
   <!-- SECTION “Qui est Divine ?” -->
-  <section id="divine">
+  <section id="divine" class="section">
     <!-- Décor SVG : plante à gauche -->
     <div class="svg-bg svg-plante3"></div>
     <!-- Décor SVG : illustration réflexion à droite -->
@@ -99,7 +101,7 @@
 
 
     <!-- SECTION “Quel est mon concept ?” -->
-  <section id="concept">
+  <section id="concept" class="section">
     
     <!-- Décor SVG : plante débordante à gauche -->
     <div class="svg-bg svg-plante1"></div>
@@ -146,9 +148,9 @@
     </div>
   </section>
   
-  <section id="dinner">
+  <section id="dinner" class="section">
     <div class="svg-bg svg-plante"></div>
-    <div class="svg-bg svg-cocktail"></div>
+    <div class="svg-bg svg-cocktail svg-floating"></div>
 
     <div class="container">
       <!-- Bloc images -->
@@ -181,7 +183,7 @@
          --------------------------------------------
          Image de fond + titre + boutons Spotify/Apple
          ============================================ -->
-    <section id="podcast">
+    <section id="podcast" class="section">
       <!-- Image de fond -->
       <div class="podcast-bg"></div>
 
