mise a jour ajout  du floating svg plant

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="intro" class="section">
     <!-- SVG Backgrounds -->
     <div class="svg-bg svg-cocktail"></div>  <!-- svg-floating -->
-    <div class="svg-bg svg-plante"></div>
+    <div class="svg-bg svg-plante svg-floating "></div>
 
     <!-- Left text block -->
     <div class="intro-left">
